; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_tlan.c_TLan_EeSendStart.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_tlan.c_TLan_EeSendStart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TLAN_NET_SIO = common dso_local global i64 0, align 8
@TLAN_DIO_ADR = common dso_local global i64 0, align 8
@TLAN_DIO_DATA = common dso_local global i64 0, align 8
@TLAN_NET_SIO_ECLOK = common dso_local global i32 0, align 4
@TLAN_NET_SIO_EDATA = common dso_local global i32 0, align 4
@TLAN_NET_SIO_ETXEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @TLan_EeSendStart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @TLan_EeSendStart(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* @TLAN_NET_SIO, align 8
  %5 = load i64, i64* %2, align 8
  %6 = load i64, i64* @TLAN_DIO_ADR, align 8
  %7 = add nsw i64 %5, %6
  %8 = call i32 @outw(i64 %4, i64 %7)
  %9 = load i64, i64* %2, align 8
  %10 = load i64, i64* @TLAN_DIO_DATA, align 8
  %11 = add nsw i64 %9, %10
  %12 = load i64, i64* @TLAN_NET_SIO, align 8
  %13 = add nsw i64 %11, %12
  store i64 %13, i64* %3, align 8
  %14 = load i32, i32* @TLAN_NET_SIO_ECLOK, align 4
  %15 = load i64, i64* %3, align 8
  %16 = call i32 @TLan_SetBit(i32 %14, i64 %15)
  %17 = load i32, i32* @TLAN_NET_SIO_EDATA, align 4
  %18 = load i64, i64* %3, align 8
  %19 = call i32 @TLan_SetBit(i32 %17, i64 %18)
  %20 = load i32, i32* @TLAN_NET_SIO_ETXEN, align 4
  %21 = load i64, i64* %3, align 8
  %22 = call i32 @TLan_SetBit(i32 %20, i64 %21)
  %23 = load i32, i32* @TLAN_NET_SIO_EDATA, align 4
  %24 = load i64, i64* %3, align 8
  %25 = call i32 @TLan_ClearBit(i32 %23, i64 %24)
  %26 = load i32, i32* @TLAN_NET_SIO_ECLOK, align 4
  %27 = load i64, i64* %3, align 8
  %28 = call i32 @TLan_ClearBit(i32 %26, i64 %27)
  ret void
}

declare dso_local i32 @outw(i64, i64) #1

declare dso_local i32 @TLan_SetBit(i32, i64) #1

declare dso_local i32 @TLan_ClearBit(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
